@@ -31,6 +31,12 @@
 			"min_val"	: 1,
 			"max_val"	: 100,
 			"tooltip"	: "Specifies the number of rows"
+		},
+		{
+			"type"		: "checkbox",
+			"var"		: "show_cursor",
+			"label"		: "Show cursor",
+			"tooltip"	: "Show a mouse cursor (if supported on device)"
 		}
 	]
 }
